# opengl

./: .gitignore
tutorials/: 01_window.cpp  02_shaders.cpp  CMakeLists.txt  glad.c  logging.cpp  main.cpp  runner.cpp  shader.cpp  window.cpp
tutorials/includes/: 01_window.hpp  02_shader.hpp  logging.hpp  shader.hpp  shader_type.hpp  window.hpp
tutorials/shaders/: fragment_shader_copy_color.glsl  vertex_shader_color.glsl
